data/derived/sp14/progs/unify/prog1563.ml.out
Characters 32-35:
  let _ = List.fold_left (fun x-> x+x) 3;;
                                  ^^^
Error: This expression has type int but an expression was expected of type
         'a -> int
